Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.1.0 ( 2017-10-04 )
----------------------------------------------------------------------
- Added a quick and a bulk edit to custom post types.
- Added nonce check for set location, import & export actions to avoid CSRF vulnerability.
- Fixed a problem with getting sidebars settings for nested pages with more than 2 levels.
- Fixed a problem with widget visibility on taxonomy archive page.
- Fixed a typo on Import/Export screen.

3.0.9 ( 2017-07-03 )
----------------------------------------------------------------------
- Added ability to turn off "Custom Sidebars" for certain roles.
- Fixed a problem with a category, category archive, and post in category replacement.
- Fixed a problem with removed "Category Archive" from "For Archives" options.
- Fixed build in taxonomies problem on "Sidebar Location" edit window.

3.0.8.1 ( 2017-06-29 )
----------------------------------------------------------------------
- Fixed CSRF vulnerability. Props for [qasuar](https://wordpress.org/support/users/qasuar/)

3.0.8 ( 2017-06-08 )
----------------------------------------------------------------------
- Added bulk sidebars edit.
- Fixed category archive and entry in category replaceable.
- Visibility of "Custom Explain" link is limited only to front-end.

3.0.7.1 ( 2017-05-25 )
----------------------------------------------------------------------
- Fixed visibility of Custom Explain - now it is visible only for administrators.

3.0.7 ( 2017-05-25 )
----------------------------------------------------------------------
- Added ability to replace sidebars for category archive.
- Added ability to replace sidebars for custom taxonomy archive.
- Added ability to turn on Custom Sidebars Explain mode from Admin Bar.
- Fixed a replacement problem on 404 pages.